--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="logo-container">
         <img src="bmdisbursements.png" alt="Logo" class="logo">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRen_dDHeIFF14LlNTGP4rXHuARzWX3-G3NSQ&s" alt="Logo" class="logo">
+        <img src="https://s3.amazonaws.com/file.imleagues/Images/Schools/Uploaded/201909/2019911902459701b6696a25b97b0b3538d90be4d9aaed.jpg" alt="Logo" class="logo">
     </div>
     <div class="form-container">
         <h1>Bankmobile Disbursements Verification Form</h1>
@@ -73,7 +73,7 @@
     </div>
 
     <footer>
-        <small>©2024 | Bankmobile Disbursements (powered by BMTX)</small>
+        <small>©2025 | Bankmobile Disbursements (powered by BMTX)</small>
     </footer>
     
 </body>
